--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,10 @@ h1, h2, h3, h4, h5, h6, p {
     margin-right: 10px;
     fill: var(--second-main);
 }
+.header-mail-icon:hover,
+.header-mail-icon:focus {
+    fill: var(--sending);
+}
 .header-contacts-item {
     font-family: 'Roboto';
     font-weight: 500;
@@ -132,9 +136,7 @@ h1, h2, h3, h4, h5, h6, p {
 .header-nav-item:hover, 
 .header-nav-item:focus, 
 .header-contacts-item:hover, 
-.header-contacts-item:focus,
-.header-mail-icon:hover,
-.header-mail-icon:focus {
+.header-contacts-item:focus, {
     color: var(--sending);
 }
 .header-active {
