--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,7 @@ footer {
     background-color: var(--main);
     opacity: 10%;
     margin-right: 10px;
+    text-align: center;
 }
 .ftcnt-item:hover,
 .ftcnt-item:focus {
@@ -229,6 +230,7 @@ footer {
 .footer-connect-icon {
     width: 20px;
     height: 20px;
+    fill: var(--main);
 }
 
 /*------------------------------------FIRST MAIN SECTION-----------------------------------*/
@@ -413,7 +415,7 @@ footer {
     justify-content: center;
 }
 .clients-item {
-    background-color: ;
+    text-align: center;
 }
 
 /*--------------------------------------PORTFOLIO-------------------------------------------*/
@@ -507,7 +509,7 @@ footer {
     width: 170px;
     height: 92px;
     border: 1px solid var(--border-three);
-
+    text-align: center;
 }
 .clients-sending {
 }
@@ -519,7 +521,4 @@ footer {
 .clients-icon:hover,
 .clients-icon:focus {
     fill: var(--sending);
-}
-.clients-sending: {
-    border: 1px solid var(--sending);
 }
