--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ footer {
     width: 20px;
     height: 20px;
     fill: var(--main);
-    opacity: 1;
+    fill-opacity: 1;
 }
 
 /*------------------------------------FIRST MAIN SECTION-----------------------------------*/
