--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     --border-two: #EEEEEE;
     --border-three: #AFB1B8;
     --iconcolor: #AFB1B8;
+    --footericon: #2F303A;
 }
 body {
     font-family: 'Roboto', sans-serif;
@@ -217,29 +218,36 @@ footer {
     display: flex;
 }
 .footer-connect {
-    fill: var(--main);
-    fill-opacity: 1;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 .ftcnt-item {
     width: 44px;
     height: 44px;
-    border-radius: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+    padding: 12px;
     background-color: var(--main);
     opacity: 10%;
-    margin-right: 10px;
     text-align: center;
-    padding: 12px;
 }
 .footer-connect-icon {
     width: 20px;
     height: 20px;
-    fill: var(--main);
-    fill-opacity: 1;
+    fill: var(--footericon);
+    text-align: center;
 }
+.footer-connect:hover,
+.footer-connect:focus,
 .ftcnt-item:hover,
-.ftcnt-item:focus {
+.ftcnt-item:focus  {
     background-color: var(--sending);
     opacity: 1;
+}
+.footer-connect-icon:hover,
+.footer-connect-icon:focus {
+    fill: var(--main);
 }
 
 /*------------------------------------FIRST MAIN SECTION-----------------------------------*/
