--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6, p {
     width: 16px;
     height: 12px;
     margin-right: 10px;
-    fill: var(--second-main);
+    fill: currentColor;
 }
 .header-phone-icon {
     width: 10px;
