--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ footer {
 }
 .footer-container {
     display: flex;
+    align-items: baseline;
 }
 .footer-part-first {
 
@@ -214,43 +215,37 @@ footer {
     color: var(--main);
     margin-bottom: 20px;
 }
-.ftcnt-list {
+.footer-connection-list {
     display: flex;
 }
-.footer-connect {
-    width: 100%;
-    height: 100%;
+.footer-connection-item {
+    width: 44px;
+    height: 44px;
+    margin-right: 10px;
+    border-radius: 50%;
     text-align: center;
-    fill: var(--main);
+    background-color: var(--main);
+    opacity: 0.1;
 }
-.ftcnt-item {
+.footer-connect-sending {
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    margin-right: 10px;
-    padding: 12px;
-    background-color: var(--main);
-    opacity: 10%;
-    text-align: center;
+    color: var(--main);
+
 }
 .footer-connect-icon {
-    width: 20px;
-    height: 20px;
+    width: 44px;
+    height: 44px;
+    padding: 12px;
     fill: currentColor;
-    opacity: 1;
-    text-align: center;
+
 }
-.footer-connect:hover,
-.footer-connect:focus,
-.ftcnt-item:hover,
-.ftcnt-item:focus  {
+.footer-connection-item:hover,
+.footer-connection-item:active {
     background-color: var(--sending);
-    opacity: 1;
 }
-.footer-connect-icon:hover,
-.footer-connect-icon:focus {
-    fill: var(--main);
-}
+
 
 /*------------------------------------FIRST MAIN SECTION-----------------------------------*/
 
@@ -441,29 +436,24 @@ footer {
     justify-content: center;
 }
 .clients-item {
-    text-align: center;
-    padding: 16px 32px;
     margin-right: 30px;
-    width: 170px;
-    height: 92px;
-    border: 1px solid var(--border-three);
     text-align: center;
 }
 .clients-sending {
 
 }
 .clients-icon {
-    width: 106px;
-    height: 60px;
+    width: 170px;
+    height: 92px;
     fill: var(--iconcolor);
+    padding: 16px 32px;
+    border-radius: 4px;
+    border: 1px solid var(--border-three);
 }
 .clients-icon:hover,
 .clients-icon:focus {
     fill: var(--sending);
     fill-opacity: 1;
-}
-.clients-item:hover,
-.clients-item:focus {
     border: 1px solid var(--sending)
 }
 
