--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,6 @@ footer {
     background-color: var(--main);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    padding-bottom: 30px;
 }
 .name {
     font-weight: 500;
@@ -387,6 +386,7 @@ footer {
 .team-connect-list {
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
 }
 .team-connect-item {
     width: 44px;
