--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ footer {
     margin-left: 70px;
 }
 .ftcnt-head {
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
